r69 - june, 6, 2009
    * phoogle.php : test if we're trying to add null GPoint
    * CotisationType : _form > tooltip which warns user about updating amount
      has been removed because of the new field "cotisation.montant"
    * Cotisation : indexSuccess.php > show the amount for each Cotisation
    * FileExporter.class.php : chtinux's patch has been applied 
    

r68 - june, 6, 2009
    * /doc/piwam-install.sql is up to date
    * README : mod_rewrite was added as required Apache module
    * README : link to online French version
    * layout.php : Google Map JS is not include anymore in the global layout
    * Membre : mapSuccess.php > include Google Map JS
    * Recette : showSuccess.php > display if "Recette.percue == 0"
    * Depense : showSuccess.php > display if "Depense.payee == 0"


r67 - june, 6, 2009
    * Recette : index > don't show date if "Recette.percue == 0"
    * Depense : index > don't show date if "Depense.payee == 0"
    * Cotisation : actions > processForm() > Redirect again to the form if we
      are registering new Cotisation (in order to record several Cotisation in 
      "one time" without going back and then coming back to the form. Redirect 
      to index action if we are editing an existing Cotisation


r66 - june, 6, 2009
    * Membre : actions > processForm > we redirect to membre/acl after 
      registering a new Membre if an username and password have been set
    * schema.yml : recette > new field 'percue'
    * schema.yml : depense : new field 'payee'
    * symfony propel:build-model
    * /data/updates : new folder which will store data when updating Piwam
      version
    * /data/updates/1.1.0beta-1.1.0 : folder to update from the public beta to
      the final 1.1.0 version
    * symfony propel:build-forms
    * ActivitePeer : getCriteriaForAssociationId() > select only enabled items
    * ComptePeer : getCriteriaForAssociationId() > select only enabled items